--- a/common-guava/pom.xml
+++ b/common-guava/pom.xml
@@ -10,5 +10,12 @@
 
     <artifactId>common-guava</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
