--- a/common-netty/pom.xml
+++ b/common-netty/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>common-netty-core</module>
         <module>common-netty-server</module>
+        <module>common-netty-simple</module>
     </modules>
 
 </project>
