--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <netty.version>4.1.36.Final</netty.version>
         <protobuf.version>3.5.1</protobuf.version>
         <fastjson.version>1.2.57</fastjson.version>
-
+        <netty-socketio.version>1.7.17</netty-socketio.version>
     </properties>
 
     <dependencies>
