--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
+                    <!--调整JVM内存参数-->
                     <argLine>-Xmx256M</argLine>
                 </configuration>
                 <dependencies>
