--- a/common-mq/pom.xml
+++ b/common-mq/pom.xml
@@ -4,21 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.alonelyleaf</groupId>
-        <artifactId>common-netty</artifactId>
+        <artifactId>common-utils</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>common-netty-server</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>common-mq</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>com.alonelyleaf</groupId>
-            <artifactId>common-netty-core</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -35,17 +27,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <!-- spring boot start plugin -->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <executable>true</executable>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
