--- a/common-netty/common-netty-simple/pom.xml
+++ b/common-netty/common-netty-simple/pom.xml
@@ -11,17 +11,33 @@
     <artifactId>common-netty-simple</artifactId>
 
     <dependencies>
+        <!-- netty-->
         <dependency>
-            <groupId>com.alonelyleaf</groupId>
-            <artifactId>common-netty-core</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${netty.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alonelyleaf</groupId>
+            <artifactId>common-util</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
