--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,15 @@
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <guava.version>27.1-jre</guava.version>
         <netty.version>4.1.36.Final</netty.version>
         <protobuf.version>3.5.1</protobuf.version>
-        <fastjson.version>1.2.57</fastjson.version>
         <netty-socketio.version>1.7.17</netty-socketio.version>
+
+        <jodd.version>5.0.13</jodd.version>
+        <fastjson.version>1.2.57</fastjson.version>
+        <commons.codec.version>1.9</commons.codec.version>
     </properties>
 
     <dependencies>
