1. add common-concurrent module 2. add Unsafe, LockSupport and FutureTask

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>common-netty</module>
         <module>common-mq</module>
         <module>common-util</module>
+        <module>common-concurrent</module>
     </modules>
 
     <properties>
