--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <jodd.version>5.0.13</jodd.version>
         <fastjson.version>1.2.57</fastjson.version>
         <commons.codec.version>1.9</commons.codec.version>
+
+        <rocketmq.version>4.4.0</rocketmq.version>
     </properties>
 
     <dependencies>
