1.add common-spring module and dispatch package 2.add common-algorithm and CalculateExpressionByStack class

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <module>common-mq</module>
         <module>common-util</module>
         <module>common-concurrent</module>
+        <module>common-spring</module>
+        <module>common-algorithm</module>
     </modules>
 
     <properties>
