--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
         <commons.codec.version>1.9</commons.codec.version>
 
         <rocketmq.version>4.4.0</rocketmq.version>
+
+        <mysql.version>8.0.16</mysql.version>
+        <mybatis.version>2.0.0</mybatis.version>
+        <pagehelper.version>1.2.9</pagehelper.version>
+        <druid.version>1.1.10</druid.version>
     </properties>
 
     <dependencies>
