--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -59,6 +59,17 @@
             <version>${druid.version}</version>
         </dependency>
 
+        <!-- redis 连接 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
