edit filter and schedule demo in common-spring module

--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>spring-cloud-starter-consul-discovery</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
