--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,8 @@
         <mybatis.version>2.0.0</mybatis.version>
         <pagehelper.version>1.2.9</pagehelper.version>
         <druid.version>1.1.10</druid.version>
+
+        <okhttp.version>3.14.1</okhttp.version>
     </properties>
 
     <dependencies>
