--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>common-ldap</module>
         <module>common-time</module>
         <module>common-audit</module>
+        <module>common-mail</module>
     </modules>
 
     <properties>
