添加工具类

--- a/common-util/pom.xml
+++ b/common-util/pom.xml
@@ -104,6 +104,12 @@
             <version>${jxls2-jexcel.version}</version>
         </dependency>
 
+        <!-- 驼峰工具 -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
