--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>common-mail</module>
         <module>common-http</module>
         <module>common-designpattern</module>
+        <module>common-oauth</module>
     </modules>
 
     <properties>
