feat: 新增prometheus从nacos发现服务模块

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>common-designpattern</module>
         <module>common-oauth</module>
         <module>common-websocket</module>
+        <module>common-prometheus</module>
     </modules>
 
     <properties>
